# rinha-backend-rust

./: Cargo.toml  Dockerfile  Dockerfile.development  docker-compose.yml
config/: init.sql  nginx.conf
src/: errors.rs  handlers.rs  main.rs  middleware.rs  models.rs  queries.rs  services.rs
